# MathTTSVer3

./: CURRENT_STATE_AND_NEXT_STEPS.md  Dockerfile  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_5_NATURALNESS_PLAN.md  PHASE3_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  USER_GUIDE.md  __init__.py  benchmark_performance.py  convert_latex.py  corrected_final_test.py  coverage.xml  coverage_analysis.md  coverage_report.txt  create_100_coverage_tests.py  create_all_missing_tests.py  create_comprehensive_tests.py  create_final_100_coverage.py  docker-compose.yml  enhance_patterns.py  example_math.tex  final_60_percent_push.py  final_natural_test.py  final_push_60.py  final_stage1_boost.py  fix_all_patterns.py  fix_imports.py  fix_test_imports.py  generate_working_tests.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  run_unit_tests.py  targeted_60_enhancement.py  test_basic_flow.py  (+13 more)
adapters/: __init__.py  pattern_loaders.py
application/: dtos.py  dtos_v3.py
docs/: architecture.md  pattern_dsl.md
domain/: __init__.py  entities.py  exceptions.py  interfaces.py  value_objects.py  value_objects_simple.py  value_objects_tts.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0ccb07ab3633eaac___init___py.html  z_0f33ba38d6bf8205___init___py.html  z_0f33ba38d6bf8205_prometheus_metrics_py.html  z_145eef247bfb46b6___init___py.html  z_24443a61519113f2___init___py.html  z_24443a61519113f2_cache_repository_py.html  z_24443a61519113f2_pattern_repository_py.html  z_24f42fec43edda32___init___py.html  z_24f42fec43edda32_expression_py.html  z_24f42fec43edda32_mathematical_expression_py.html  z_24f42fec43edda32_pattern_py.html  z_2772aaafcb7ff58c___init___py.html  z_2772aaafcb7ff58c_yaml_pattern_loader_py.html  z_284c6712ee74efcd___init___py.html  z_284c6712ee74efcd_main_py.html  z_3163f03559bf0b15___init___py.html  z_3163f03559bf0b15_base_py.html  z_3163f03559bf0b15_edge_tts_adapter_py.html  z_3163f03559bf0b15_gtts_adapter_py.html  z_3163f03559bf0b15_mock_tts_adapter_py.html  z_3163f03559bf0b15_pyttsx3_adapter_py.html  z_3163f03559bf0b15_ssml_converter_py.html  z_562e0757a91e9a5a___init___py.html  z_562e0757a91e9a5a_process_expression_py.html  z_5a2dc17ead558053___init___py.html  z_5a2dc17ead558053_dtos_py.html  z_5a2dc17ead558053_dtos_v3_py.html  z_632b3cb742b5fe7c___init___py.html  z_632b3cb742b5fe7c_persistence_py.html  z_632b3cb742b5fe7c_rate_limiting_deps_py.html  z_632b3cb742b5fe7c_rate_limiting_py.html  z_81b9bfba1e66808c___init___py.html  z_81b9bfba1e66808c_memory_pattern_repository_py.html  z_81b9bfba1e66808c_simple_memory_repository_py.html  z_91a8153e379ad568___init___py.html  z_91a8153e379ad568_mathematical_rhythm_processor_py.html  (+45 more)
patterns/: core_patterns.yaml  master_patterns.yaml
scripts/: validate_patterns.py
test_documents/: complex_mathematics.tex
tests/: __init__.py  conftest.py  test_adapters.py  test_final_integration.py  test_infrastructure.py  test_integration.py  test_integration_standalone.py  test_system_integration.py
(+124 files in other folders)
